# TableMsgPackage

./: CMakeLists.txt  README.md  autoMake.sh  install.sh  table_msg-1.0-Linux.sh
config/: CMakeLists.txt  TableMsgConfig.cmake.in  config.sh
include/: class.h
lib/: TableMsgConfig.cmake
src/: class.cpp
